fixing overflow x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 768px){
   body{
-    overflow-x:clip;
+    overflow-x:hidden;
   }
 }
 
